# waf_presence_checker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: ROE_TEMPLATE.md  USAGE.md  WHITEPAPER.md
examples/: sample_headers.txt
tests/: test_analyzer.py
waf_presence_checker/: __init__.py  analyzer.py  cli.py  fingerprints.py  models.py  parsers.py  reporters.py
